[tool.poetry]
name = "awesomeqa"
package-mode = false
version = "0.1.0"
description = "AwesomeQA challenge"
authors = ["SamedBayer <samedbayer1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
langchain-openai = "^0.1.3"
ipykernel = "^6.29.4"
jsonlines = "^4.0.0"
annoy = "^1.17.3"
langchain-community = "^0.0.34"
sentence-transformers = "^2.7.0"
langchain = "^0.1.16"
langchain-core = "^0.1.45"
python-dotenv = "^1.0.1"
rapidfuzz = "^3.8.1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
